tests/NormalTests/paczka1/small_fuzzy/94741402.err
Error in line 1: iOedZKc A744 44,9
Error in line 3: A208 A744 18,5
Error in line 8: iOedZKc S78 18,25
